[gd_scene load_steps=7 format=3 uid="uid://qul2bmbejhkk"]

[ext_resource type="Script" path="res://Level/level.gd" id="1_y4w44"]
[ext_resource type="Script" path="res://Level/Level2D.gd" id="2_idq3n"]
[ext_resource type="Texture2D" uid="uid://bq5ayq18l7pbq" path="res://graphics/decals/dirt_patch.png" id="2_snhmi"]
[ext_resource type="PackedScene" uid="uid://dmklgqfckkjbj" path="res://Player/player.tscn" id="3_cg6so"]
[ext_resource type="PackedScene" uid="uid://che515igvdgbq" path="res://Scenes/Wall/wall.tscn" id="5_ks4vq"]
[ext_resource type="PackedScene" uid="uid://bhbho504fsiyo" path="res://Meta/Meta.tscn" id="5_rfjdn"]

[node name="Level" type="Node"]
script = ExtResource("1_y4w44")

[node name="Level2D" type="Node2D" parent="."]
script = ExtResource("2_idq3n")

[node name="Floor" type="Node2D" parent="Level2D"]

[node name="DirtPatch" type="Sprite2D" parent="Level2D/Floor"]
position = Vector2(791, 507)
texture = ExtResource("2_snhmi")

[node name="DirtPatch2" type="Sprite2D" parent="Level2D/Floor"]
position = Vector2(692, 1289)
texture = ExtResource("2_snhmi")

[node name="DirtPatch3" type="Sprite2D" parent="Level2D/Floor"]
position = Vector2(1584, 1219)
texture = ExtResource("2_snhmi")

[node name="DirtPatch4" type="Sprite2D" parent="Level2D/Floor"]
position = Vector2(1552, 625)
texture = ExtResource("2_snhmi")

[node name="DirtPatch5" type="Sprite2D" parent="Level2D/Floor"]
position = Vector2(162, 939)
texture = ExtResource("2_snhmi")

[node name="DirtPatch6" type="Sprite2D" parent="Level2D/Floor"]
position = Vector2(82, 104)
texture = ExtResource("2_snhmi")

[node name="DirtPatch7" type="Sprite2D" parent="Level2D/Floor"]
position = Vector2(127, 1730)
texture = ExtResource("2_snhmi")

[node name="DirtPatch8" type="Sprite2D" parent="Level2D/Floor"]
position = Vector2(922, 1833)
texture = ExtResource("2_snhmi")

[node name="DirtPatch9" type="Sprite2D" parent="Level2D/Floor"]
position = Vector2(1677, 1709)
texture = ExtResource("2_snhmi")

[node name="DirtPatch10" type="Sprite2D" parent="Level2D/Floor"]
position = Vector2(854, -148)
texture = ExtResource("2_snhmi")

[node name="DirtPatch11" type="Sprite2D" parent="Level2D/Floor"]
position = Vector2(1713, 119)
texture = ExtResource("2_snhmi")

[node name="Walls" type="Node2D" parent="Level2D"]

[node name="Wall" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(-200, 136)

[node name="Wall26" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(-200, -248)

[node name="Wall2" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(-200, 520)

[node name="Wall3" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(-200, 908)

[node name="Wall4" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(-197, 1283)

[node name="Wall5" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(-200, 1670)

[node name="Wall6" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(-197, 2054)

[node name="Wall13" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(2104, 1944)

[node name="Wall14" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(2104, 1576)

[node name="Wall15" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(2104, 1200)

[node name="Wall16" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(2104, 816)

[node name="Wall17" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(2104, 432)

[node name="Wall18" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(2104, 56)

[node name="Wall19" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(2104, -320)

[node name="Wall7" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(31, 2180)
rotation = 1.5708

[node name="Wall8" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(409, 2180)
rotation = 1.5708

[node name="Wall9" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(796, 2177)
rotation = 1.5708

[node name="Wall10" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(1184, 2176)
rotation = 1.5708

[node name="Wall11" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(1568, 2176)
rotation = 1.5708

[node name="Wall20" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(1880, -440)
rotation = 1.5708

[node name="Wall21" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(1496, -440)
rotation = 1.5708

[node name="Wall22" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(1120, -440)
rotation = 1.5708

[node name="Wall23" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(736, -440)
rotation = 1.5708

[node name="Wall24" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(360, -440)
rotation = 1.5708

[node name="Wall25" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(-8, -432)
rotation = 1.5708

[node name="Wall12" parent="Level2D/Walls" instance=ExtResource("5_ks4vq")]
position = Vector2(1952, 2176)
rotation = 1.5708

[node name="Player" parent="Level2D" instance=ExtResource("3_cg6so")]
position = Vector2(969, 665)

[node name="Timers" type="Node" parent="."]

[node name="EntitySpawn" type="Timer" parent="Timers"]
wait_time = 0.4
autostart = true

[node name="SpawnSpeedIncrease" type="Timer" parent="Timers"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="EntitySpeedIncrease" type="Timer" parent="Timers"]
wait_time = 5.0
autostart = true

[node name="Meta" parent="." instance=ExtResource("5_rfjdn")]
process_mode = 3

[connection signal="timeout" from="Timers/EntitySpawn" to="Level2D" method="_on_entity_spawn_timeout"]
[connection signal="timeout" from="Timers/SpawnSpeedIncrease" to="." method="_on_spawn_speed_increase_timeout"]
[connection signal="timeout" from="Timers/EntitySpeedIncrease" to="." method="_on_entity_speed_increase_timeout"]
